* 2013-08-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Disable Hazelcast's REST and Memcache client request listener services by default 

* 2013-08-13 - marcus.klein@open-xchange.com

 - Fix for bug 23141: Terminate OSGi framework and backend gracefully allowing components to remove their temporary things.

* 2013-08-13 - thorben.betten@open-xchange.com

 - Fix for bug 23992: Introduced property to disable folder caches in IMAP
 - Fix for bug 26023: Specify supported SSL protocols on secure connect attempt
 - Change for bug 27420: Handle possible unexpected EOF gracefully
 - Fix for bug 28125: Track I18nService as an optional service
 - Fix for bug 27565/28241: Orderly check for Halo service's availability

* 2013-08-12 - thorben.betten@open-xchange.com

 - Fix for bug 28003 + 28192: Use proper primary-key-dependent SQL statement + fixed SQL query

* 2013-08-09 - marcus.klein@open-xchange.com

 - Fix for bug 24624: White listed our known clients to have their logins recorded always. Testing the client login parameter for
   self-defeating values.

* 2013-08-09 - thorben.betten@open-xchange.com

 - Fix for bug 28110: Show an appropriate hint to perform a logout&login cycle after successful password-change

* 2013-08-08 - thorben.betten@open-xchange.com

 - Fix for bug 28139: Invalidate login-info cache entries, too, when invalidating context cachings
 - Fix for bug 28119: Return a non-zero return code for 'checkconsistency' CLI if invocation fails
 - Fix for bug 28137: Proper help text for 'changeaccessglobal' CLI
 - Fix for bug 28141: Added needed 'com.openexchange.java' bundle to CLIs
 - Fix for bug 28143: Re-connect MailAccess instance if read timed out
 - Fix for bug 28144: Fixed possible 'java.lang.IndexOutOfBoundsException' when parsing CSS content
 - Fix for bug 28145: Set proper class path for 'usercopy' CLI
 - Fix for bug 28147: Lowered log level to DEBUG
 - Fix for bug 28153: Obfuscate debug loggings if it contains sensitive content