@@ -88,6 +88,7 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
     private volatile long max;
     private final Parameterizable parameterizable;
     private volatile ServletInputStream servletInputStream;
+    private String env;
 
     /**
      * Initializes a new {@link CountingHttpServletRequest}.
@@ -118,7 +119,7 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
         this.servletRequest = servletRequest;
         parameterizable = servletRequest instanceof Parameterizable ? (Parameterizable) servletRequest : null;
     }
-    
+
     /**
      * Sets the max. number of bytes to accept
      *
@@ -162,12 +163,14 @@ public final class CountingHttpServletRequest implements HttpServletRequest, Par
 
     @Override
     public String getCharacterEncoding() {
-        return servletRequest.getCharacterEncoding();
+        final String characterEncoding = servletRequest.getCharacterEncoding();
+        return null == characterEncoding ? env : characterEncoding;
     }
 
     @Override
     public void setCharacterEncoding(final String env) throws UnsupportedEncodingException {
         servletRequest.setCharacterEncoding(env);
+        this.env = env;
     }
 
     @Override
